# QtWeatherApp

./: CMakeLists.txt  ConditionsNavigator.cpp  ConditionsNavigator.h  Mountain.cpp  Mountain.h  MountainLocations.h  OpenMeteoForecastSource.cpp  OpenMeteoForecastSource.h  README.md  main.cpp
Android/: AndroidManifest.xml  gradlew
Resources/: Resources.qrc
cmake/: FindArcGISRuntime.cmake
qml/: ConditionsNavigatorForm.qml  main.qml  qml.qrc
